cardrivers/dev_ws/log/build_2022-05-04_07-59-46/adafruit_drivers/stderr.log
  File "/home/dev_ws/install/adafruit_drivers/lib/python3.8/site-packages/include/Adafruit_I2C/Adafruit_I2C.py", line 65
    print "I2C: Wrote 0x%02X to register 0x%02X" % (value, reg)
          ^
SyntaxError: invalid syntax

  File "/home/dev_ws/install/adafruit_drivers/lib/python3.8/site-packages/include/PCA9685/PWMSteering.py", line 15
    rclpy.get_logger().info('[PWM Steering] Set speed pulse to %s', pulse))
                                                                          ^
SyntaxError: unmatched ')'

